# pymgcv

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: test.yml
.github/workflows/: docs.yml  test.yml
api/basis_functions/: index.html
api/families/: index.html
api/gam/: index.html
api/miscellaneous/: index.html
api/plot/: index.html
api/terms/: index.html
contributing/: index.html
docs/: contributing.md  home.ipynb  index.ipynb  index.md
docs/api/: bases.md  basis_functions.md  families.md  gam.md  plot.md  smooth.md  terms.md
docs/examples/: cyclical_components.ipynb  electricity_bam.ipynb  gamlss.ipynb  linear_functional.ipynb  ozone.ipynb  simple_example.ipynb  smooth_by_categorical.ipynb  spatial_fish_eggs.ipynb  spatial_interactions.ipynb  supplement_vs_placebo.ipynb
docs/stylesheets/: extra.css
docs/workshop_examples/: co2.py  ozone.py
examples/cyclical_components/: index.html
examples/electricity_bam/: index.html
examples/gamlss/: index.html
examples/linear_functional/: index.html
examples/ozone/: index.html
examples/seasonal_co2/: index.html
examples/smooth_by_categorical/: index.html
examples/spatial_fish_eggs/: index.html
examples/spatial_interactions/: index.html
examples/supplement_vs_placebo/: index.html
pymgcv/: __init__.py  bases.py  basis_functions.py  converters.py  custom_types.py  diagnostics.py  families.py  first_func.py  formula_utils.py  gam.py  plot.py  qq.py  rgam_utils.py  rpy_utils.py  smooth.py  smooth_options.py  smoothing_bases.py  smooths.py  term_utils.py  terms.py  utils.py
search/: search_index.json
tests/: gam_test_cases.py  test_converters.py  test_first_func.py  test_fitted_gam.py  test_gam.py  test_plot.py  test_qq.py  test_smooth.py  test_terms.py
