[project]
name = "pymgcv"
requires-python = ">= 3.11"
version = "0.0.0"

dependencies = ["rpy2>=3.6.1"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
dev = ["pytest"]

# --------------pixi config ----------------#
# Minimal pixi environment for development and CI
[tool.pixi.dependencies]
r-base = ">=4.4.3,<4.5"

[tool.pixi.pypi-options]
no-build-isolation = ["rpy2"]

[tool.pixi.pypi-dependencies]
pymgcv = { path = ".", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
dev = ["dev"]
