[project]
name = "pymgcv"
# requires-python = ">= 3.11, <= 3.12"  # This works
requires-python = ">= 3.11"  # This gives the linker error
version = "0.0.0"

dependencies = ["rpy2"]


[project.optional-dependencies]
dev = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pytest.ini_options]
pythonpath = ["."]

# ------------------- pixi config --------------------#

[tool.pixi.dependencies]
r-base = ">=4.5.1,<4.6"
compilers = ">=1.10.0,<2"

[tool.pixi.pypi-dependencies]
pymgcv = { path = ".", editable = true }

[tool.pixi.pypi-options]
no-build-isolation = ["rpy2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.environments]
dev = ["dev"]


# [project]
# name = "pymgcv"
# # requires-python = ">= 3.11"
# requires-python = ">= 3.11, <=3.12"
# version = "0.0.0"

# dependencies = ["rpy2>=3.6.1"]

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]

# [project.optional-dependencies]
# dev = ["pytest"]

# # --------------pixi config ----------------#
# # Minimal pixi environment for development and CI
# [tool.pixi.dependencies]
# cffi = ">=1.17.1,<2"    # https://github.com/rpy2/rpy2/issues/739
# setuptools = ">=80.9.0,<81"
#


# [tool.pixi.pypi-options]
# no-build-isolation = ["rpy2"]

# [tool.pixi.pypi-dependencies]
# pymgcv = { path = ".", editable = true }

# [tool.pixi.workspace]
# channels = ["conda-forge"]
# platforms = ["linux-64", "osx-64", "osx-arm64"]

# [tool.pixi.environments]
# dev = ["dev"]
