[project]
name = "pymgcv"
# requires-python = ">= 3.11, <= 3.12"  # This works
requires-python = ">= 3.11"  # This gives the linker error
version = "0.0.0"
dependencies = [
    "rpy2==3.6.0a2",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
pythonpath = ["."]

# ------------------- pixi config --------------------#

[tool.pixi.dependencies]
r-base = ">=4.5.1,<4.6"
setuptools = ">=80.9.0,<81"
xz = ">=5.8.1,<6"

[tool.pixi.pypi-dependencies]
pymgcv = { path = ".", editable = true }

[tool.pixi.pypi-options]
no-build-isolation = ["rpy2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.environments]
dev = ["dev"]
